--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha-webpack --webpack-config webpack.config-test.js \"js/**/*.test.js\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "mocha": "^3.2.0",
+    "mocha-webpack": "^0.7.0",
     "webpack": "^2.4.1"
   }
 }
