--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "test": "mocha-webpack --webpack-config webpack.config-test.js \"js/**/*.test.js\""
+    "test": "mocha \"js/**/*.test.js\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "mocha": "^3.2.0",
-    "mocha-webpack": "^0.7.0",
     "webpack": "^2.4.1"
   }
 }
